--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
    
 	<div>
 		<div>
-			<h2 class="subtitulo">Nueces</h2>
+			<h2 class="subtitulo">Castañas de caju</h2>
 			<p class="SobreNosotros">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit facere molestias corrupti consectetur laudantium nihil <br> btotam. Vero, obcaecati odio quam explicabo quasi deleniti doloribus eius dolores nostrum! Necessitatibus, accusamus ex!
 				Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste sed veritatis neque. Quasi quas quia esse quos nulla similique a provident dolorum harum! Enim, sint non laboriosam hic incidunt magnam!
