--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -27,7 +27,7 @@
             <nav class="header__section--menu" id="nav">
                 <ul class="FondoMenu">			<!-- Menú de navegación -->
                     <li class="listaBloqueMenu"><a class="a" href="index.html">Inicio</a></li>
-                    <li class="listaBloqueMenu"><a class="a" href="sobre-nosotros.html">Sobre Nosotros</a></li>
+                    <li class="listaBloqueMenu"><a class="a" href="sobrenosotros.html">Sobre Nosotros</a></li>
                     <li class="listaBloqueMenu"><a class="a" href="productos.html">Productos</a></li>
                     <li class="listaBloqueMenu"><a class="a" href="contactos.html">Contacto</a></li>
                     <li class="listaBloqueMenu"><a class="a" href="envíos.html">Envíos</a></li>		
