--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -17,7 +17,7 @@
         </div>
         <div class="header">
             <section id="logo" class="header__section--logo">
-                <a href="index.html"> <img src="https://scontent.fcor2-1.fna.fbcdn.net/v/t1.6435-1/s200x200/105618845_119658886457750_9008809471486246585_n.png?_nc_cat=107&ccb=1-3&_nc_sid=dbb9e7&_nc_ohc=CeOG8oQeNHgAX94psG4&_nc_ht=scontent.fcor2-1.fna&tp=30&oh=df99e736e53d491f72d3a3d471e80549&oe=60D886CE" alt="Logo Nueces del Alto" class="logo__nueces"></a>
+                <a href="index.html"> <img src="https://scontent.fcor10-3.fna.fbcdn.net/v/t1.6435-9/105618845_119658886457750_9008809471486246585_n.png?_nc_cat=107&ccb=1-3&_nc_sid=09cbfe&_nc_eui2=AeEyuzvil_Dksuf0HveB0od_hCDnEULQKyyEIOcRQtArLC6tCsW9hu45EnyD_d5oUNc&_nc_ohc=nprdBDS5FP0AX830R7R&_nc_ht=scontent.fcor10-3.fna&oh=a8781695840835009b456af98cd3f779&oe=6121E2AC" alt="Logo Nueces del Alto" class="logo__nueces"></a>
             </section>
             <section class="header__section--titulo" id="nombre">
                     <section class="titulo__header">
@@ -33,12 +33,7 @@
                     <li class="listaBloqueMenu"><a class="a" href="envíos.html">Envíos</a></li>		
                 </ul>
             </nav>
-            <section class="header__section--buscador" id="buscar">
-                <form action="/action_page.php">
-                    <label class="ColBuscador" for="gsearch">Search Google:</label>
-                    <input type="search" id="gsearch" name="gsearch">
-                </form>
-            </section>
+
         </div>
     </header>
     <div class="cuerpo" id="grilla">
@@ -46,11 +41,8 @@
             <h2 class="subtitulo">Historia</h2>
             <p class="Párrafo">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit facere molestias corrupti consectetur laudantium nihil <br> btotam. Vero, obcaecati odio quam explicabo quasi deleniti doloribus eius dolores nostrum! Necessitatibus, accusamus ex!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste sed veritatis neque. Quasi quas quia esse quos nulla similique a provident dolorum harum! Enim, sint non laboriosam hic incidunt magnam!
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, voluptatibus? Molestiae sit nobis dolor dicta maiores. Quo illum eligendi blanditiis quas, saepe porro similique maiores distinctio, dolorem perspiciatis debitis sequi!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit facere molestias corrupti consectetur laudantium nihil <br> btotam. Vero, obcaecati odio quam explicabo quasi deleniti doloribus eius dolores nostrum! Necessitatibus, accusamus ex!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste sed veritatis neque. Quasi quas quia esse quos nulla similique a provident dolorum harum! Enim, sint non laboriosam hic incidunt magnam!
-            </p>
+
+
             <img src="img/nnnnnnn.PNG" alt="Imagen Historia" class="imagenHistoria">
             <p class="Párrafo">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, totam. Molestiae obcaecati adipisci, doloremque recusandae eligendi dolore, impedit quae veritatis nisi sunt mollitia nulla aspernatur. Laudantium molestias quaerat nulla libero.
@@ -60,11 +52,7 @@
             <h2 class="subtitulo">Valores</h2>
             <p class="Párrafo">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta tenetur enim fuga veritatis vitae in esse earum minima ratione magnam unde numquam, eius aliquam itaque delectus quas alias incidunt quia?
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam repellat deserunt odit. Temporibus, praesentium? Reiciendis laborum sunt a in unde harum iure dolores iusto ipsam vero doloribus, eos corrupti atque?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet voluptates cupiditate perferendis, repellat quidem, doloribus nihil, unde repellendus tempore rem omnis eos natus. Expedita, necessitatibus nam neque esse quasi
-                doloribus, eos corrupti atque?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet voluptates cupiditate perferendis, repellat quidem, doloribus nihil, unde repellendus tempore rem omnis eos natus. Expedita, necessitatibus nam neque esse quasi
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, voluptatibus? Molestiae sit nobis dolor dicta maiores. Quo illum eligendi blanditiis quas, saepe porro similique maiores distinctio, dolorem perspiciatis debitis sequi!
+                Lorem ipsum dolor sit amet, consectetur adipisicing 
             </p>
             <img src="img/la nuez.PNG" alt="Imagen Historia" class="imagenValores">
             <p class="Párrafo">
@@ -75,10 +63,7 @@
             <h2 class="subtitulo">Familia</h2>
             <p class="Párrafo">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quibusdam error illo accusantium debitis odit adipisci, delectus at assumenda sit temporibus earum inventore quaerat nemo magni aut nobis enim ipsam.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque hic excepturi perferendis eos consectetur laboriosam sed id, ducimus recusandae, temporibus harum quo rem! Dolore voluptas quas, temporibus vero ipsa
-                doloribus, eos corrupti atque?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet voluptates cupiditate perferendis, repellat quidem, doloribus nihil, unde repellendus tempore rem omnis eos natus. Expedita, necessitatibus nam neque esse quasi.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, voluptatibus? Molestiae sit nobis dolor dicta maiores. Quo illum eligendi blanditiis quas, saepe porro similique maiores distinctio, dolorem perspiciatis debitis sequi!
+    
             </p>
             <img src="img/nueces.jpg" alt="Imagen Família" class="imagenFamília">
             <p class="Párrafo">
