--- a/contactos.html
+++ b/contactos.html
@@ -5,10 +5,11 @@
 	<link rel="icon" href="https://scontent.fcor2-1.fna.fbcdn.net/v/t1.6435-9/105618845_119658886457750_9008809471486246585_n.png?_nc_cat=107&ccb=1-3&_nc_sid=09cbfe&_nc_eui2=AeEyuzvil_Dksuf0HveB0od_hCDnEULQKyyEIOcRQtArLC6tCsW9hu45EnyD_d5oUNc&_nc_ohc=JGF-JvKA4C0AX-3U-Z8&_nc_ht=scontent.fcor2-1.fna&oh=886b523c77bbf6a67f8362621eee0585&oe=60DCABEC" type="image/x-icon">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
 	<link rel="stylesheet" href="css/Style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href='https://fonts.googleapis.com/css?family=Aleo' rel='stylesheet'>
-	<title> &#174 Sobre Nosotros</title>
+	<title> &#174 Contacto</title>
 </head>
 <body class="body">
 	<header>
@@ -17,7 +18,7 @@
         </div>
         <div class="header">
             <section id="logo" class="header__section--logo">
-                <a href="index.html"> <img src="https://scontent.fcor2-1.fna.fbcdn.net/v/t1.6435-1/s200x200/105618845_119658886457750_9008809471486246585_n.png?_nc_cat=107&ccb=1-3&_nc_sid=dbb9e7&_nc_ohc=CeOG8oQeNHgAX94psG4&_nc_ht=scontent.fcor2-1.fna&tp=30&oh=df99e736e53d491f72d3a3d471e80549&oe=60D886CE" alt="Logo Nueces del Alto" class="logo__nueces"></a>
+                <a href="index.html"> <img src="https://scontent.fcor10-3.fna.fbcdn.net/v/t1.6435-9/105618845_119658886457750_9008809471486246585_n.png?_nc_cat=107&ccb=1-3&_nc_sid=09cbfe&_nc_eui2=AeEyuzvil_Dksuf0HveB0od_hCDnEULQKyyEIOcRQtArLC6tCsW9hu45EnyD_d5oUNc&_nc_ohc=nprdBDS5FP0AX830R7R&_nc_ht=scontent.fcor10-3.fna&oh=a8781695840835009b456af98cd3f779&oe=6121E2AC" alt="Logo Nueces del Alto" class="logo__nueces"></a>
             </section>
             <section class="header__section--titulo" id="nombre">
                     <section class="titulo__header">
@@ -33,12 +34,7 @@
                     <li class="listaBloqueMenu"><a class="a" href="envíos.html">Envíos</a></li>		
                 </ul>
             </nav>
-            <section class="header__section--buscador" id="buscar">
-                <form action="/action_page.php">
-                    <label class="ColBuscador" for="gsearch">Search Google:</label>
-                    <input type="search" id="gsearch" name="gsearch">
-                </form>
-            </section>
+
         </div>
     </header>
 	<fieldset class="contorno">
@@ -63,7 +59,7 @@
 				<input id="limpiar" type="reset" value="Limpiar formulario">
 			</form>
 	</fieldset>
-
+    
 	<footer class="footer--contacto">
         <section class="section">
             <div>
