modificación de index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="body">
 	<header>
         <div class="cabecera">
-            <h3>Recibí tu pedido hoy en Neuquén // Plottier // Cipolleti &#128640</h3>
+            <h3>Recibí tus pedidos hoy en Neuquén // Plottier // Cipolleti &#128640</h3>
         </div>
         <div class="header">
             <section id="logo" class="header__section--logo">
