--- a/contactos.html
+++ b/contactos.html
@@ -9,6 +9,15 @@
 	<link rel="stylesheet" href="css/Style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href='https://fonts.googleapis.com/css?family=Aleo' rel='stylesheet'>
+    <!-- Meta etiquetas / SEO-->
+    <meta name="description" content="Distribuidora de frutos secos en la província de Neuquen, con envíos a todo el país">
+    <!-- Keywords-->
+    <meta name="keywords" content="almendras non pareil, nueces, maní, maní salado, castañas de cajú, duraznos deshidratados, mix de frutos secos, garrapiñadas de almendra, garrapiñadas de maní, garrapiñadas de castañas de cajú, vitaminas, salud, bienestar, mix cervecero, mix proteico, mix de frutos secos">
+    <!-- Favicon-->
+    <!-- Open graph-->
+    <meta property="og:title" content="Distribuidora de frutos secos en Neuquén">
+    <meta property="Envíos gratuitos en Plottier, Neuquén y Cipolleti">
+	<title> &#174 Inicio - Nueces del Alto - Frutos secos de calidad</title>
 	<title> &#174 Contacto</title>
 </head>
 <body class="body">
